--- a/youtube-sharing-be/package.json
+++ b/youtube-sharing-be/package.json
@@ -28,6 +28,7 @@
     "@nestjs/passport": "^8.2.2",
     "@nestjs/platform-express": "^7.6.13",
     "@nestjs/typeorm": "^8.1.4",
+    "bcrypt": "^5.0.1",
     "mysql2": "^2.3.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
@@ -41,6 +42,7 @@
     "@nestjs/cli": "^7.5.6",
     "@nestjs/schematics": "^7.2.7",
     "@nestjs/testing": "^7.6.13",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.31",
