--- a/youtube-sharing-be/package.json
+++ b/youtube-sharing-be/package.json
@@ -23,12 +23,14 @@
   },
   "dependencies": {
     "@nestjs/common": "^7.6.13",
+    "@nestjs/config": "^2.1.0",
     "@nestjs/core": "^7.6.13",
     "@nestjs/jwt": "^8.0.1",
     "@nestjs/passport": "^8.2.2",
     "@nestjs/platform-express": "^7.6.13",
     "@nestjs/typeorm": "^8.1.4",
     "bcrypt": "^5.0.1",
+    "dotenv": "^16.0.1",
     "mysql2": "^2.3.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
