--- a/youtube-sharing-be/package.json
+++ b/youtube-sharing-be/package.json
@@ -19,9 +19,12 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "start:azure": "npm run build && func host start"
   },
   "dependencies": {
+    "@azure/functions": "^1.0.3",
+    "@nestjs/azure-func-http": "^0.8.0",
     "@nestjs/common": "^7.6.13",
     "@nestjs/config": "^2.1.0",
     "@nestjs/core": "^7.6.13",
@@ -29,7 +32,7 @@
     "@nestjs/passport": "^8.2.2",
     "@nestjs/platform-express": "^7.6.13",
     "@nestjs/typeorm": "^8.1.4",
-    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.1",
     "mysql2": "^2.3.3",
     "passport": "^0.6.0",
