Update basic UI and add api to store video sharer

--- a/youtube-sharing-fe/package.json
+++ b/youtube-sharing-fe/package.json
@@ -20,6 +20,7 @@
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
+    "react-youtube": "^9.0.3",
     "swr": "^1.3.0"
   },
   "devDependencies": {
